# Creo-v1

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Documentation/: Jarvis_Tools_and_Protocols.md  Postgres_pgvector_Setup.md  V1_ChatGPT_Handoff.md  kokoro_voice_modelling_and_wake_word_integration.md
Documentation/V2_handoff/: V2_Codex_Handoff.md  architecture.md  audio_pipeline.md  environment_and_env.md  memory_models.md  models.md  orchestrator_capabilities.md  resource_management.md
config/: sound_effects.yml  voices.kokoro.yml
jarvis/: config.py  main.py  persona.py
jarvis/audio/: capture.py  output.py  ring_buffer.py  sfx.py
jarvis/audio/wakeword/: base.py  openwakeword.py  (+1 more)
jarvis/lang/: __init__.py  script_detect.py
jarvis/llm/: plan_schema.py  router.py  router_modes.py  types.py
jarvis/memory/: models.py  store.py
jarvis/orchestrator/: clock.py  events.py  maintenance.py  policies.py  state_machine.py
jarvis/telemetry/: logging.py  system_metrics.py  tracing.py
jarvis/tools/: _tasks.db  calendar.py  ingest.py  meeting.py  planner.py  registry.py  reminders.py  retrieve.py  sensors.py  taskgraph.py  tasks.py
jarvis/transcription/: __init__.py  base.py  cheetah.py  realtimestt.py  vosk.py
jarvis/tts/: kokoro.py  voice_router.py
jarvis/ui/: websocket.py
jarvis_voice_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_planner.py  test_reminders.py  test_router_modes.py  test_script_detect.py  test_transcription_cheetah.py  test_tts_routing.py
tools/asr_tester/: README.md  main.py
(+4 files in other folders)
